finalized the dashing function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
      <p class="bad-capital toggle">tHIS sEntENCE is BaDly cApItalIZeD</p>
      <p class="capital-correct toggle"></p>
     </div>
+    <div class="container">
+      <p class="text-muted">Now lets try replacing the characters</p>
+       <p class="dash-text"></p>
+    </div>
+    <div class="container">
+     <p class="text-muted">Now this here below may be the solution we have been looking for since Friday</p>
+     <p class="dash-this dash">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+     <p class="this-dash dash"></p>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
